# GeoManager

./: .claude  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  skills-lock.json  start-dev.sh
backend/: environment.yml  manage.py  pyproject.toml
backend/apps/audit/: admin.py  apps.py  events.py  middleware.py  models.py  service.py  tests.py
backend/apps/catalog/: admin.py  apps.py  data_query.py  export.py  geojson_validation.py  importer.py  map_compositions.py  models.py  permissions.py  serializers.py  services.py  symbolization_templates.py  test_data_query.py  tests.py  urls.py  vector_importer.py  vector_recovery.py  vector_storage.py  vector_store.py  views.py  visualization.py
backend/apps/core/: admin.py  admin_api.py  admin_config.py  admin_site.py  api.py  apps.py  auth_views.py  backup_config.py  backup_scheduler.py  backup_service.py  backup_targets.py  cli.py  config.py  emails.py  initialization.py  map_thumbnail.py  middleware.py  models.py  passwords.py  permissions.py  principal_visibility.py  role_applications.py  storage.py  test_permissions.py  tests.py  urls.py  views.py
backend/apps/ecology/: apps.py  models.py  serializers.py
backend/apps/omics/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/raster/: admin.py  apps.py  models.py  permissions.py  test_color_mapping.py  test_geo_utils.py  test_progress.py  test_rules_engine.py  tests.py  urls.py  views.py
backend/apps/standards/: apps.py  models.py  serializers.py  (+2 more)
backend/data_sharing_platform/: asgi.py  settings.py  urls.py  wsgi.py
backend/geomanager/: settings.py  test_settings.py  urls.py
backend/scripts/: bump_version.py
(+259 files in other folders)
