[project]
name = "data-sharing-platform-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "Django>=6.0,<7.0",
  "geopandas>=1.0",
  "rasterio>=1.4",
  "Pillow>=11.0",
  "openpyxl>=3.1",
  "tomlkit>=0.13",
  "whitenoise>=6.8",
  "xlrd>=2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0",
  "pytest-django>=4.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "data_sharing_platform.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--reuse-db",
]
markers = [
  "unit: pure unit tests that should avoid database and external services",
  "integration: Django integration tests covering models, services, and API endpoints",
]
